docs: reflect ABCL adapter round in HANDOFF + CHANGELOG
HANDOFF.md:
- Header date and current-state paragraph reflect the ABCL round
  on 2026-04-15 (commit cd1cef4). Embedded adapter count bumped
  from 10 to 11, assertion count from 530 to 536 (+6 from the
  ABCL declared tests).
- Warm-up checklist adds `--adapter-tests --only abcl` so the
  next session can run a single adapter's declared tests without
  the surrounding ConsoleWorkerTests.Run harness.
- Reading list integration-scripts row contrasts CCL's
  kernel-redefine-gated `(setf (symbol-function ...) ...)` with
  ABCL's simpler `(setf top-level::*repl-prompt-fun* ...)`, and
  the adapter-YAMLs row documents the Groovy pattern (java.exe
  from Program Files loading a jar payload from %LocalAppData%)
  as the blueprint for future JVM-hosted REPLs.
- Candidate-work item #4 updated: Q1 counter now has three
  evidence points (Racket, ABCL, locally-validated CCL), so a
  Q4 `balanced_parens: { preset: lisp }` preset is now concrete
  work. GHCi is still blocked as a user-dir PE but Clojure via
  the Groovy pattern would ship for free.
- New candidate-work item #4b: confirm CCL policy status. As of
  2026-04-15 CCL's probe + 5 declared tests run green on this
  box, which suggests the AppLocker user-dir PE block may have
  been relaxed (or an unblock request was approved). Next step
  is to verify on another box with the old policy before
  un-gitignoring ccl.yaml + integration.lisp and committing.
- Three new Gotchas entries: ABCL 1.9.2's cosmetic JDK 21
  virtual-threading warning suppressed via `--add-opens`; ABCL's
  default `CL-USER(N): ` prompt overridden to `? ` for mode-regex
  parity with CCL; ABCL's `system::debug-loop` uses a separate
  prompt mechanism so the CCL-style `N > ` nested debugger mode
  is intentionally deferred.
- Commit history prepends cd1cef4 (ABCL) and b367e99 (doc commit
  from the cache/drain round) so the newest three commits are
  visible at the head.

CHANGELOG.md:
- Extended t